Switch to java-deptools-native 1.2.0