@@ -38,7 +38,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.11.0</version>
           <configuration>
-            <release>21</release>
+            <release>22</release>
           </configuration>
         </plugin>
 	<plugin>
@@ -46,7 +46,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.3.1</version>
           <configuration>
-            <argLine>--enable-preview --enable-native-access ALL-UNNAMED</argLine>
+            <argLine>--enable-native-access ALL-UNNAMED</argLine>
           </configuration>
 	</plugin>
       </plugins>
